FB-2: create splash, authentication screens and app icon
- Create splash, about, settings and authentication screens (login, sign up) screens
- App Icon:
    - Source: [flaticon fitness](https://www.flaticon.com/premium-icon/fitness_2749673?term=fitness&page=1&position=5&page=1&position=5&related_id=2749673&origin=search)
    - Generate from Image Asset feature of Android Studio.
- Icons:
  - [Info](https://fonts.google.com/icons?selected=Material%20Icons%20Round%3Ainfo%3A)
  - [Logout](https://fonts.google.com/icons?selected=Material%20Icons%20Round%3Alogout%3A)
  - [Settings](https://fonts.google.com/icons?selected=Material%20Icons%20Round%3Asettings%3A)
  - [Arrow forward](https://fonts.google.com/icons?selected=Material%20Icons%20Round%3Aarrow_forward%3A)
  - [Today](https://fonts.google.com/icons?selected=Material%20Icons%20Round%3Atoday%3A)
  - [Google](https://www.flaticon.com/free-icon/google_300221?term=google&page=1&position=1&page=1&position=1&related_id=300221&origin=search#)
- Some color states, string and color constants (resource file), and font family (roboto).
- Utility function: a function to make underline for TextView.

--- a/fitbook/app/src/main/AndroidManifest.xml
+++ b/fitbook/app/src/main/AndroidManifest.xml
@@ -10,12 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Fitbook">
         <activity
-            android:name=".DrawerActivity"
+            android:name=".views.activities.SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.activities.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.activities.MainFeatureActivity"
             android:exported="false"
             android:label="@string/title_activity_drawer"
             android:theme="@style/Theme.Fitbook.NoActionBar" />
         <activity
-            android:name=".MainActivity"
+            android:name=".views.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
