--- a/fitbook/app/src/main/AndroidManifest.xml
+++ b/fitbook/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.h2a.fitbook">
+    package="com.h2a.fitbook" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -8,15 +10,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Fitbook">
+        android:theme="@style/Theme.Fitbook" >
         <activity
-            android:name=".DrawerActivity"
+            android:name=".views.activities.addfood.ManualAddFoodActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.activities.addfood.AddFoodActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainFeatureActivity"
             android:exported="false"
             android:label="@string/title_activity_drawer"
             android:theme="@style/Theme.Fitbook.NoActionBar" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
