--- a/fitbook/app/build.gradle
+++ b/fitbook/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation "io.coil-kt:coil:2.0.0-rc02"
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 }
