--- a/fitbook/app/build.gradle
+++ b/fitbook/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -53,4 +54,13 @@ dependencies {
     implementation "io.coil-kt:coil:2.0.0-rc02"
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:29.3.1')
+
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
+    implementation 'com.google.firebase:firebase-firestore:24.1.1'
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
 }
